--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "vant": "^1.5.1",
-    "vue": "^2.5.21"
+    "vue": "^2.6.9",
+    "vue-template-compiler": "^2.6.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.2",
@@ -21,7 +22,6 @@
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
-    "vue-template-compiler": "^2.5.21"
+    "stylus-loader": "^3.0.2"
   }
 }
